Implement requested application updates
